# AoC2024

./: README.md
01_Dec_2024/: 01_assignment.txt  CMakeLists.txt  Day01_main.cpp  Day01_solution.py  Day01_solution_part_1.cpp  Day01_solution_part_1.h  Day01_solution_part_2.cpp  Day01_solution_part_2.h
02_Dec_2024/: 02_assignment.txt  CMakeLists.txt  Day02_main.cpp  Day02_solution.py  Day02_solution_part_1.cpp  Day02_solution_part_1.h  Day02_solution_part_2.cpp  Day02_solution_part_2.h
03_Dec_2024/: 03_assignment.txt  CMakeLists.txt  Day03_main.cpp  Day03_solution.py  Day03_solution_part_1.cpp  Day03_solution_part_1.h  Day03_solution_part_2.cpp  Day03_solution_part_2.h
04_Dec_2024/: 04_assignment.txt  CMakeLists.txt  Day04_main.cpp  Day04_solution.py  Day04_solution_part_1.cpp  Day04_solution_part_1.h  Day04_solution_part_2.cpp  Day04_solution_part_2.h
05_Dec_2024/: 05_assignment.txt  CMakeLists.txt  Day05_main.cpp  Day05_solution.py  Day05_solution_part_1.cpp  Day05_solution_part_1.h  Day05_solution_part_1_old.cpp  Day05_solution_part_2.cpp  Day05_solution_part_2.h  Day05_solution_part_2_old2.cpp
06_Dec_2024/: 06_assignment.txt  CMakeLists.txt  Day06_main.cpp  Day06_solution.py  Day06_solution_part_1.cpp  Day06_solution_part_1.h  Day06_solution_part_2.cpp  Day06_solution_part_2.h
07_Dec_2024/: 07_assignment.txt  CMakeLists.txt  Day07_main.cpp  Day07_solution.py  Day07_solution_part_1.cpp  Day07_solution_part_1.h  Day07_solution_part_2.cpp  Day07_solution_part_2.h
08_Dec_2024/: 08_assignment.txt  CMakeLists.txt  Day08_main.cpp  Day08_solution.py  (+4 more)
(+150 files in other folders)
